add general_api.py + add prepare_target_pairs

--- a/notebooks/EDA_First_look.ipynb
+++ b/notebooks/EDA_First_look.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "4f818b9b",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "56ac17f1",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "86683a2c",
    "metadata": {},
    "outputs": [
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "4cf806c3",
    "metadata": {},
    "outputs": [
@@ -1219,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "dd9482bd",
    "metadata": {},
    "outputs": [
@@ -1668,7 +1668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "df662b9c",
    "metadata": {},
    "outputs": [
@@ -1703,7 +1703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "dff508ef",
    "metadata": {},
    "outputs": [
@@ -1713,7 +1713,7 @@
        "(np.int64(0), np.int64(1916))"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1724,7 +1724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "id": "12a51f1e",
    "metadata": {},
    "outputs": [
@@ -1734,7 +1734,7 @@
        "(np.int64(1827), np.int64(1916))"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1792,7 +1792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "id": "548eca2a",
    "metadata": {},
    "outputs": [
@@ -2166,7 +2166,7 @@
        "[1917 rows x 425 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2177,7 +2177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "334a9146",
    "metadata": {},
    "outputs": [
@@ -2296,7 +2296,7 @@
        "[424 rows x 3 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2307,7 +2307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "id": "c156f967",
    "metadata": {},
    "outputs": [
@@ -2338,7 +2338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "id": "6aad0cc2",
    "metadata": {},
    "outputs": [
@@ -2377,7 +2377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 13,
    "id": "1637b900",
    "metadata": {},
    "outputs": [
@@ -2583,7 +2583,7 @@
        "[5 rows x 425 columns]"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2595,7 +2595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 14,
    "id": "53e0e002",
    "metadata": {},
    "outputs": [
@@ -2815,7 +2815,7 @@
        "[5 rows x 558 columns]"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2827,7 +2827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 15,
    "id": "297cce3a",
    "metadata": {},
    "outputs": [
@@ -2920,7 +2920,7 @@
        "4          LME_AH_Close    JPX_Gold_Standard_Futures_Close  "
       ]
      },
-     "execution_count": 188,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2935,7 +2935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 19,
    "id": "5b53f88e",
    "metadata": {},
    "outputs": [],
@@ -2949,7 +2949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 20,
    "id": "afe4924f",
    "metadata": {},
    "outputs": [
@@ -2978,6 +2978,7 @@
        "      <th>US_Stock_VT_adj_close</th>\n",
        "      <th>target_0_pred</th>\n",
        "      <th>diff</th>\n",
+       "      <th>diff_rounded</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2987,6 +2988,7 @@
        "      <td>120.5361</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1828</th>\n",
@@ -2994,6 +2996,7 @@
        "      <td>120.8451</td>\n",
        "      <td>0.002560</td>\n",
        "      <td>-3.122502e-17</td>\n",
+       "      <td>-0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1829</th>\n",
@@ -3001,6 +3004,7 @@
        "      <td>121.4929</td>\n",
        "      <td>0.005346</td>\n",
        "      <td>-7.806256e-17</td>\n",
+       "      <td>-0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1830</th>\n",
@@ -3008,6 +3012,7 @@
        "      <td>121.5029</td>\n",
        "      <td>0.000082</td>\n",
        "      <td>-4.157915e-17</td>\n",
+       "      <td>-0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1831</th>\n",
@@ -3015,21 +3020,29 @@
        "      <td>120.1174</td>\n",
        "      <td>-0.011469</td>\n",
        "      <td>5.724587e-17</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      target_0  US_Stock_VT_adj_close  target_0_pred          diff\n",
-       "1827       NaN               120.5361            NaN           NaN\n",
-       "1828  0.002560               120.8451       0.002560 -3.122502e-17\n",
-       "1829  0.005346               121.4929       0.005346 -7.806256e-17\n",
-       "1830  0.000082               121.5029       0.000082 -4.157915e-17\n",
-       "1831 -0.011469               120.1174      -0.011469  5.724587e-17"
+       "      target_0  US_Stock_VT_adj_close  target_0_pred          diff  \\\n",
+       "1827       NaN               120.5361            NaN           NaN   \n",
+       "1828  0.002560               120.8451       0.002560 -3.122502e-17   \n",
+       "1829  0.005346               121.4929       0.005346 -7.806256e-17   \n",
+       "1830  0.000082               121.5029       0.000082 -4.157915e-17   \n",
+       "1831 -0.011469               120.1174      -0.011469  5.724587e-17   \n",
+       "\n",
+       "      diff_rounded  \n",
+       "1827           NaN  \n",
+       "1828          -0.0  \n",
+       "1829          -0.0  \n",
+       "1830          -0.0  \n",
+       "1831           0.0  "
       ]
      },
-     "execution_count": 190,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3039,13 +3052,14 @@
     "y_pred_preparation_target_0[\"target_0_pred\"] = np.log(y_pred_preparation[target_0] / y_pred_preparation[target_0].shift(1))\n",
     "target_0_df = pd.concat([target_0_df, y_pred_preparation_target_0.shift(-2)], axis = 1)\n",
     "target_0_df[\"diff\"] = target_0_df[\"target_0\"] - target_0_df[\"target_0_pred\"]\n",
+    "target_0_df[\"diff_rounded\"] = np.round(target_0_df[\"diff\"], 0)\n",
     "\n",
     "target_0_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 21,
    "id": "9d7e29d5",
    "metadata": {},
    "outputs": [
@@ -3075,6 +3089,7 @@
        "      <th>US_Stock_VT_adj_close</th>\n",
        "      <th>target_1_pred</th>\n",
        "      <th>diff</th>\n",
+       "      <th>diff_rounded</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -3085,6 +3100,7 @@
        "      <td>120.5361</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1828</th>\n",
@@ -3093,6 +3109,7 @@
        "      <td>120.8451</td>\n",
        "      <td>-0.004592</td>\n",
        "      <td>3.642919e-17</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1829</th>\n",
@@ -3101,6 +3118,7 @@
        "      <td>121.4929</td>\n",
        "      <td>-0.014539</td>\n",
        "      <td>8.673617e-17</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1830</th>\n",
@@ -3109,6 +3127,7 @@
        "      <td>121.5029</td>\n",
        "      <td>-0.005226</td>\n",
        "      <td>-3.209238e-17</td>\n",
+       "      <td>-0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1831</th>\n",
@@ -3117,6 +3136,7 @@
        "      <td>120.1174</td>\n",
        "      <td>0.016613</td>\n",
        "      <td>8.673617e-17</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3130,15 +3150,15 @@
        "1830 -0.005226        1939.0               121.5029      -0.005226   \n",
        "1831  0.016613        1949.0               120.1174       0.016613   \n",
        "\n",
-       "              diff  \n",
-       "1827           NaN  \n",
-       "1828  3.642919e-17  \n",
-       "1829  8.673617e-17  \n",
-       "1830 -3.209238e-17  \n",
-       "1831  8.673617e-17  "
+       "              diff  diff_rounded  \n",
+       "1827           NaN           NaN  \n",
+       "1828  3.642919e-17           0.0  \n",
+       "1829  8.673617e-17           0.0  \n",
+       "1830 -3.209238e-17          -0.0  \n",
+       "1831  8.673617e-17           0.0  "
       ]
      },
-     "execution_count": 191,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3152,9 +3172,67 @@
     "\n",
     "target_1_df = pd.concat([target_1_df, y_pred_preparation_target_1.shift(-2)], axis = 1)\n",
     "target_1_df[\"diff\"] = target_1_df[\"target_1\"] - target_1_df[\"target_1_pred\"]\n",
+    "target_1_df[\"diff_rounded\"] = np.round(target_1_df[\"diff\"], 0)\n",
     "\n",
     "target_1_df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "b1e49df7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prepare_target_pairs(df) -> dict:\n",
+    "    \"\"\" Prepare target pairs for analysis.\n",
+    "\n",
+    "    Args:\n",
+    "        df (pd.DataFrame): DataFrame containing target pairs incl. lag assignment. \n",
+    "\n",
+    "    Returns:\n",
+    "        dict: Resolved relationships between targets and assets, grouped by lag.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    output_dict = dict()\n",
+    "    distinct_lags = df[\"lag\"].unique().tolist()\n",
+    "\n",
+    "    for i, lag in enumerate(distinct_lags):\n",
+    "\n",
+    "        df_tmp = df[df[\"lag\"] == i+1].copy()\n",
+    "        df_tmp.loc[:, \"asset_1\"] = df_tmp[\"pair\"].str.split(\"-\").str[0]\n",
+    "        df_tmp.loc[:, \"asset_2\"] = df_tmp[\"pair\"].str.split(\"-\").str[1]\n",
+    "\n",
+    "        output_dict[f\"lag_{i+1}\"] = df_tmp[[\"target\", \"asset_1\", \"asset_2\"]]\n",
+    "    \n",
+    "    return output_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "49ebbe15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_pairs_prep = prepare_target_pairs(target_pairs_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8dc0d574",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a2a0a84",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -3296,7 +3374,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "mitsui-pred-challenge-py3.10",
    "language": "python",
    "name": "python3"
   },
